--- a/CxtAI/.gitignore
+++ b/CxtAI/.gitignore
@@ -1,4 +1,9 @@
-*.pyc
-__pycache__/
+# Ignore virtual environments
 myenv/
-db.sqlite3
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# Ignore other unnecessary files
+*.log
